<?xml version="1.0"?>
<package format="3">
  <name>camera_calibration</name>
  <version>0.0.1</version>
  <description>Camera and LiDAR calibration toolkit</description>

  <maintainer email="your@email.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>yaml-cpp</depend>
  <depend>message_filters</depend>
  <depend>open3d</depend>
  <depend>pcl_conversions</depend>

  <exec_depend>opencv4</exec_depend>
</package>
